Fixed double tap zoom on iOS

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -103,6 +103,7 @@ body {
   background: $hydrapp;
   color: #ffffff;
   display: flex;
+  height: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
