--- a/src/scss/stats.scss
+++ b/src/scss/stats.scss
@@ -2,7 +2,7 @@
     display: none;
     position: absolute;
     background: $hydrapp;
-    min-height: 80vh;
+    height: 100%;
     width: 100%;
     z-index: 997;
     text-align: center;
